--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ body {
   }
   .listContainer1 .listContainer2{    
     margin: 50px;
-    border: solid;
-    /* border-width: 5px;
+    /*border: solid;
+     border-width: 5px;
   border-color: #C34A36;
 border-radius: 1px; */
 }
